--- a/clients/pixijs-ui/package.json
+++ b/clients/pixijs-ui/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "eslint --ext .ts src"
   },
   "author": "Kannan Vijayan <kv-github@kvijayan.com>",
   "license": "GPL-3.0",
@@ -19,6 +20,7 @@
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
