--- a/clients/pixijs-ui/package.json
+++ b/clients/pixijs-ui/package.json
@@ -13,10 +13,8 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
-    "eslint": "^8.50.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint": "8.53.0",
     "html-webpack-plugin": "^5.5.3",
-    "prettier": "^3.0.3",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
