--- a/clients/pixijs-ui/package.json
+++ b/clients/pixijs-ui/package.json
@@ -15,6 +15,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "8.53.0",
     "html-webpack-plugin": "^5.5.3",
+    "@stylistic/eslint-plugin": "1.0.0",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
