Fix spelling mistake in package.json

--- a/clients/pixijs-ui/package.json
+++ b/clients/pixijs-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "renfrew-reiver-pixijs-ui",
+  "name": "renfrew-river-pixijs-ui",
   "version": "0.1.0",
   "description": "User Interface for Renfrew River",
   "main": "index.js",
