Removed webpack from protocol client library.
tsc can generate the library code, and it can be bundled
by downstream users like the pixijs client.

Also added the generated distribution files to git tracking.

--- a/clients/protocol-client/package.json
+++ b/clients/protocol-client/package.json
@@ -6,7 +6,7 @@
   "types": "./dist/lib.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production",
+    "build": "tsc",
     "lint": "eslint --ext .ts src"
   },
   "author": "Kannan Vijayan <kv-github@kvijayan.com>",
@@ -14,12 +14,8 @@
   "devDependencies": {
     "eslint": "8.53.0",
     "@stylistic/eslint-plugin": "1.0.0",
-    "terser-webpack-plugin": "^5.3.9",
-    "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
-    "@typescript-eslint/eslint-plugin": "6.9.1",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "@typescript-eslint/eslint-plugin": "6.9.1"
   },
   "dependencies": {}
 }
