--- a/clients/pixijs-ui/package.json
+++ b/clients/pixijs-ui/package.json
@@ -12,6 +12,7 @@
   "author": "Kannan Vijayan <kv-github@kvijayan.com>",
   "license": "GPL-3.0",
   "devDependencies": {
+    "babel-loader": "9.1.3",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "8.53.0",
     "html-webpack-plugin": "^5.5.3",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "@pixi/ui": "^0.9.0",
-    "pixi.js": "^7.3.1"
+    "pixi.js": "^7.3.1",
+    "renfrew-river-protocol-client": "file:../protocol-client"
   }
 }
