Add cmdline arguments to ws-server.
For use by e2e tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bytemuck = { version = "1.14" }
+clap = { version = "4.4.7", features = ["derive"] }
 env_logger = { version = "0.10" }
 futures = { version = "0.3" }
 futures-util = { version = "0.3" }
