--- a/clients/protocol-client/tsconfig.json
+++ b/clients/protocol-client/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "commonjs",
+    "module": "ES6",
     "sourceMap": true,
     "strict": true,
     "esModuleInterop": true,
