--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,13 @@ edition = "2021"
 
 [dependencies]
 bytemuck = { version = "1.14" }
+chumsky = "1.0.0-alpha.7"
 clap = { version = "4.4.7", features = ["derive"] }
 env_logger = { version = "0.10" }
 futures = { version = "0.3" }
 futures-util = { version = "0.3" }
 log = { version = "0.4" }
+regex = "1.11.1"
 serde = { version = "1.0", features = ["derive", "std", "alloc"] }
 serde_json = "1.0"
 tokio = { version = "1.32", features = ["rt", "macros"] }
