--- a/clients/react-pixijs-ui/package.json
+++ b/clients/react-pixijs-ui/package.json
@@ -15,6 +15,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.0",
     "@pixi/react": "^7.1.2",
+    "@tiptap/extension-color": "^2.11.2",
+    "@tiptap/react": "^2.11.2",
+    "@tiptap/starter-kit": "^2.11.2",
+    "jotai": "^2.11.1",
+    "mui-tiptap": "^1.17.0",
     "pixi.js": "^7.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
