--- a/clients/react-pixijs-ui/package.json
+++ b/clients/react-pixijs-ui/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.0",
     "@pixi/react": "^7.1.2",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tiptap/extension-color": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@tiptap/starter-kit": "^2.11.2",
@@ -23,6 +24,7 @@
     "pixi.js": "^7.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "renfrew-river-protocol-client": "file:../protocol-client"
   },
   "devDependencies": {
