--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ log = { version = "0.4" }
 regex = "1.11.1"
 serde = { version = "1.0", features = ["derive", "std", "alloc"] }
 serde_json = "1.0"
+sha256 = "1.6.0"
 tokio = { version = "1.32", features = ["rt", "macros"] }
 warp = { version = "0.3" }
 wgpu = { version = "0.17" }
